results/SpecGenBench/4-shot/log-PowerOfFourLoop-2023_11_28_00_50_21.txt
class PowerOfTwoLoop {
    //@ ensures \result <==> n > 0 && (\forall int i; 0 <= i && i < \result; n % 4 == 0);
    public boolean isPowerOfTwo(int n) {
        if(n <= 0) {
            return false;
        }
        //@ maintaining n > 0;
        //@ decreases n;
        while (n % 4 == 0) {
            n /= 4;
        }
        return n == 1;
    }
}
/home/max/Documents/JMLGPT/tmp/PowerOfFourLoop.java:2: error: bad operand types for binary operator '<'
    //@ ensures \result <==> n > 0 && (\forall int i; 0 <= i && i < \result; n % 4 == 0);
                                                                  ^
  first type:  int
  second type: boolean
1 error

